--- a/index.html
+++ b/index.html
@@ -146,10 +146,8 @@
       background-color: #f0f7ff;
     }
 
-    /* Scroll bảng nếu nhiều */
+    /* Bảng hiển thị đầy đủ tất cả dữ liệu */
     #mainContent > div.table-container {
-      max-height: 350px;
-      overflow-y: auto;
       margin-bottom: 30px;
       border-radius: 6px;
       box-shadow: inset 0 0 8px #ddd;
